# python_libreoffice_oooscript

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  conftest.py  hello.py  pyproject.toml  tox.ini
.github/workflows/: tests.yml
docs/: conf.py  index.rst  intro.rst  requirements.txt  style_guide.txt
docs/_static/css/: readthedocs_custom.css  readthedocs_dark.css
docs/_static/js/: custom.js
docs/oooscript/: config.rst  dev.rst  env.rst  index.rst  quick_start.rst  start.rst  ver_hist.rst
oooscript/: .oooscript_root  __init__.py
oooscript/cfg/: config.py
oooscript/cli/: main.py
oooscript/lib/: enums.py  ex.py
oooscript/models/: model_type_enum.py
oooscript/models/example/: args.py  model_example.py
oooscript/models/script_cfg/: args.py  model_script_cfg.py
oooscript/res/: __init__.py
oooscript/res/code/: __init__.py  prelude_pyz.py
oooscript/res/docs/: __init__.py  blank.odf  blank.odg  blank.odp  blank.ods
oooscript/utils/: paths.py  util.py
scripts/: publish.py  publish_test.py
tests/: __init__.py  conftest.py  test_odt_manifest.py  test_version.py
tests/fixtures/msg_box/: config.json  script.py
tests/fixtures/msg_box/msg_box_pkg/: msgbox.py
tests/fixtures/my_first_macro/: config.json  script.py
tests/fixtures/sudoku/: config.json  script.py
tests/test_build/: test_build.py  test_build_util.py  test_embed.py  test_suduko.py
tests/test_cli/: conftest.py  test_cli_scripts.py
tests/test_merge1/: conftest.py
tests/test_merge1/test_build/: test_build_util.py  test_copy_res.py  test_embed.py
tests/test_merge2/: conftest.py  test_build.py
tests/test_merge2/test_build/: test_build.py
tests/test_util/: test_util.py
