[tool.poetry]
name = "oooscript"
version = "1.1.4"
description = "Compiles several python scripts into a single script that can be eaisly used by LibreOffice as a macro."
authors = [":Barry-Thomas-Paul: Moss <vibrationoflife@protonmail.com>"]
homepage = "https://github.com/Amourspirit/python_libreoffice_oooscript"
documentation = "https://oooscript.readthedocs.io/en/latest/"
repository = "https://github.com/Amourspirit/python_libreoffice_oooscript"
license = "MIT"
readme = "README.md"
keywords = ["ooouno", "libreoffice", "stickytape", "uno", "pyuno", "macro"]
classifiers=[
    "License :: OSI Approved :: Apache Software License",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
packages = [
    { include = "oooscript" }
]


[tool.poetry.scripts]
oooscript = 'oooscript.cli.main:main'

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.21.1"
pydantic = "^1.10.2"
scriptmerge = ">=1.1.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
typing-extensions = "^4.7.1"
ooo-dev-tools = "==0.30.3"

[tool.poetry.group.test.dependencies]
pytest = "7.1.3"


[tool.poetry.group.docs.dependencies]
sphinx-toolbox = "^3.4.0"
sphinxcontrib-spelling = "^8.0.0"
sphinx-rtd-dark-mode = "^1.2.4"
sphinx = "^6.2.1"
sphinx-autodoc-typehints = "1.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
